Webspark Hero - 7.x-1.9, 2019-12-31
----------------------------------------
- Suppressed rendering of scroll bars when hero content overflows

Webspark Hero - 7.x-1.8, 2019-XX-XX (SECURITY UPDATE)
------------------------------
- All form field outputs are now sanitized before rendering. (This is mitigated in that only Drupal users with privileges
  to create and save heroes and jumbo heroes could exploit this vulnerability)
- Height option added to settings field to allow Jumbo Heroes with this widget.
- Bylines/blurbs are no longer truncated automatically with an ellipsis and limited to one line

Webspark Hero - 7.x-1.7, 2019-08-02
------------------------------
- Improved mouseover description when a link to create an ASU spotlight is rendered in the In-Page Editor

Webspark Hero - 7.x-1.4, 2018-01-31
------------------------------
- Added ellipsis to long image blurbs/taglines to fix mobile layout issues
- Added SASS files for all future CSS development
- Updated most element and font units from px to em or rem

Webspark Hero - 7.x-1.4-dev, 2014-11-25
------------------------------
- Restored old css class "hero-bg-img"

Webspark Hero - 7.x-1.3-dev, 2014-11-21
------------------------------
- Reworked help text.