@@ -2,7 +2,7 @@ name = Webspark Hero
 description = Adds the option to create and insert an ASU-standards compliant, 1170px wide hero image (with text, buttons, etc.)
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.9
+version = 7.x-1.10
 project = webspark_hero
 dependencies[] = backgroundfield
 dependencies[] = ctools
@@ -18,6 +18,7 @@ dependencies[] = options
 dependencies[] = panopoly_widgets
 dependencies[] = strongarm
 dependencies[] = text
+dependencies[] = flogger
 stylesheets[all][] = css/webspark_hero.css
 features[ctools][] = field_group:field_group:1
 features[ctools][] = strongarm:strongarm:1
