@@ -1,3 +1,7 @@
+Webspark Jumbohero - 7.x-1.10, 2020-01-03
+------------------------------
+- Added default height values to existing hero FPPs (fixed regression in last release).
+
 Webspark Hero - 7.x-1.9, 2019-12-31
 ----------------------------------------
 - Suppressed rendering of scroll bars when hero content overflows
